# cacrt

./: .gitignore  CHANGELOG-roots.md  CHANGELOG.md  CURATION.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml
build_support/: base64.rs  canon.rs  curation.rs  der.rs  mod.rs  octal.rs  pem.rs  sha1.rs
examples/: cacrt-tool.rs
roots/: AC_RAIZ_FNMT_RCM.pem  ANF_Secure_Server_Root_CA.pem  Amazon_Root_CA_1.pem  Amazon_Root_CA_3.pem  Amazon_Root_CA_4.pem  Atos_TrustedRoot_Root_CA_ECC_TLS_2021.pem  Atos_TrustedRoot_Root_CA_RSA_TLS_2021.pem  Autoridad_de_Certificacion_Firmaprofesional_CIF_A62634068.pem  BJCA_Global_Root_CA1.pem  BJCA_Global_Root_CA2.pem  Buypass_Class_2_Root_CA.pem  Buypass_Class_3_Root_CA.pem  CA_Disig_Root_R2.pem  CFCA_EV_ROOT.pem  COMODO_ECC_Certification_Authority.pem  Certainly_Root_E1.pem  Certum_Trusted_Network_CA.pem  Certum_Trusted_Network_CA_2.pem  D_TRUST_BR_Root_CA_1_2020.pem  D_TRUST_EV_Root_CA_1_2020.pem  D_TRUST_EV_Root_CA_2_2023.pem  D_TRUST_Root_Class_3_CA_2_2009.pem  D_TRUST_Root_Class_3_CA_2_EV_2009.pem  DigiCert_Assured_ID_Root_G2.pem  DigiCert_Assured_ID_Root_G3.pem  GDCA_TrustAUTH_R5_ROOT.pem  GTS_Root_R1.pem  GTS_Root_R3.pem  GTS_Root_R4.pem  GlobalSign_ECC_Root_CA_R4.pem  GlobalSign_ECC_Root_CA_R5.pem  GlobalSign_Root_CA_R3.pem  GlobalSign_Root_R46.pem  Go_Daddy_Root_Certificate_Authority_G2.pem  HARICA_TLS_ECC_Root_CA_2021.pem  Hellenic_Academic_and_Research_Institutions_ECC_RootCA_2015.pem  Hongkong_Post_Root_CA_3.pem  IdenTrust_Commercial_Root_CA_1.pem  IdenTrust_Public_Sector_Root_CA_1.pem  Microsec_e_Szigno_Root_CA_2009.pem  (+34 more)
roots/ACCV/: ACCVRAIZ1.pem  README.md
roots/ANF/: ANF_Secure_Server_Root_CA.pem  README.md
roots/Actalis/: Actalis_Authentication_Root_CA.pem  README.md
roots/Amazon/: Amazon_Root_CA_1.pem  Amazon_Root_CA_2.pem  Amazon_Root_CA_3.pem  Amazon_Root_CA_4.pem  README.md
roots/Atos/: Atos_TrustedRoot_2011.pem  Atos_TrustedRoot_Root_CA_ECC_TLS_2021.pem  Atos_TrustedRoot_Root_CA_RSA_TLS_2021.pem  README.md
roots/BJCA/: BJCA_Global_Root_CA1.pem  BJCA_Global_Root_CA2.pem  README.md
roots/Buypass/: README.md
roots/CFCA/: CFCA_EV_ROOT.pem  README.md
roots/Certainly/: Certainly_Root_E1.pem  Certainly_Root_R1.pem  README.md
roots/Certigna/: Certigna_Root_CA.pem  README.md
roots/Certum/: Certum_EC_384_CA.pem  Certum_Trusted_Network_CA.pem  Certum_Trusted_Network_CA_2.pem  Certum_Trusted_Root_CA.pem  README.md
roots/Chunghwa-Telecom/: HiPKI_Root_CA_G1.pem  README.md
roots/Cybertrust-Japan/: README.md  SecureSign_Root_CA12.pem  SecureSign_Root_CA14.pem  SecureSign_Root_CA15.pem
roots/D-Trust/: D_TRUST_BR_Root_CA_1_2020.pem  D_TRUST_BR_Root_CA_2_2023.pem  (+5 more)
src/: lib.rs
tests/: api.rs  crosscheck.rs  example_anchor.rs
(+122 files in other folders)
